feat: Adiciona seção de material de estudos e realiza adaptações nas outras páginas para que os links de acesso sejam acrescentados

--- a/home.html
+++ b/home.html
@@ -26,6 +26,7 @@
                     <a id="nav-exercicios" href="exercicios.html" class="nav-item"><i class="fas fa-book-open"></i><span>Exercícios</span></a>
                     <a id="nav-discursivas" href="discursivas.html" class="nav-item"><i class="fas fa-file-signature"></i><span>Questões Discursivas</span></a>
                     <a id="nav-dicas" href="dicas-estrategicas.html" class="nav-item"><i class="fas fa-bullseye"></i><span>Dicas Estratégicas</span></a>
+                    <a id="nav-estudo" href="material-de-estudo.html" class="nav-item"><i class="fas fa-book-reader"></i><span>Material de Estudo</span></a>
                 </nav>
         
                 <div class="sidebar-footer">
@@ -84,6 +85,16 @@
                      <div class="feature-card">
                         <div class="feature-header"><div class="feature-icon purple"><i class="fas fa-file-signature"></i></div><div class="feature-info"><h3>Questões Discursivas</h3><p>Pratique e receba correções detalhadas da IA.</p></div></div>
                         <a href="discursivas.html" class="btn btn-primary btn-full">Praticar Discursivas</a>
+                    </div>
+                    <div class="feature-card">
+                        <div class="feature-header">
+                            <div class="feature-icon teal"><i class="fas fa-book-reader"></i></div>
+                            <div class="feature-info">
+                                <h3>Material de Estudo</h3>
+                                <p>Acesse guias em PDF e videoaulas complementares.</p>
+                            </div>
+                        </div>
+                        <a href="material-de-estudo.html" class="btn btn-primary btn-full">Acessar Material</a>
                     </div>
                 </div>
             </div>
