--- a/index.html
+++ b/index.html
@@ -59,6 +59,11 @@
                 <div class="feature-card"><div class="feature-icon green"><i class="fas fa-brain"></i></div><h3>Exercícios Inteligentes</h3><p>Questões geradas com base nas suas dificuldades.</p></div>
                 <div class="feature-card"><div class="feature-icon purple"><i class="fas fa-file-alt"></i></div><h3>Correção de Redações</h3><p>Correção detalhada de textos com feedback específico.</p></div>
                 <div class="feature-card"><div class="feature-icon orange"><i class="fas fa-bullseye"></i></div><h3>Dicas Estratégicas</h3><p>Conselhos personalizados baseados na sua evolução.</p></div>
+                <div class="feature-card">
+                    <div class="feature-icon teal"><i class="fas fa-book-reader"></i></div>
+                    <h3>Material de Estudo</h3>
+                    <p>Acesse guias, videoaulas e outros materiais de apoio.</p>
+                </div>
             </div>
         </div>
     </section>
@@ -75,6 +80,7 @@
                         <li><i class="fas fa-check"></i> Exercícios Inteligentes</li>
                         <li><i class="fas fa-check"></i> Correção de Discursivas</li>
                         <li><i class="fas fa-check"></i> Dicas Estratégicas</li>
+                        <li><i class="fas fa-check"></i> Limite de 10 Usos por Funcionalidade</li>
                     </ul>
                     <button class="btn btn-outline btn-full" onclick="window.location.href='cadastro.html'">Começar Teste Gratuito</button>
                 </div>
@@ -86,6 +92,7 @@
                         <li><i class="fas fa-check"></i> Dicas Estratégicas</li>
                         <li><i class="fas fa-check"></i> Acesso ao Guia em PDF</li>
                         <li><i class="fas fa-check"></i> Acesso a Vídeo Aulas</li>
+                        <li><i class="fas fa-check"></i> Limite de 10 Usos/Dia por Funcionalidade</li>
                     </ul>
                     <button class="btn btn-primary btn-full" onclick="window.location.href='contratacao.html?plano=basico'">Assinar Básico</button>
                 </div>
@@ -96,6 +103,7 @@
                     <ul class="features-list">
                         <li><i class="fas fa-check"></i> <strong>Tudo do Básico</strong></li>
                         <li><i class="fas fa-check"></i> Módulo de Exercícios IA</li>
+                        <li><i class="fas fa-check"></i> Limite de 10 Usos/Dia por Funcionalidade</li>
                     </ul>
                     <button class="btn btn-primary btn-full" onclick="window.location.href='contratacao.html?plano=intermediario'">Assinar Intermediário</button>
                 </div>
@@ -105,6 +113,7 @@
                     <ul class="features-list">
                         <li><i class="fas fa-check"></i> <strong>Tudo do Intermediário</strong></li>
                         <li><i class="fas fa-check"></i> Correção de Discursivas IA</li>
+                        <li><i class="fas fa-check"></i> Limite de 10 Usos/Dia por Funcionalidade</li>
                     </ul>
                     <button class="btn btn-primary btn-full" onclick="window.location.href='contratacao.html?plano=premium'">Assinar Premium</button>
                 </div>
@@ -115,6 +124,7 @@
                         <li><i class="fas fa-check"></i> <strong>Todas as funcionalidades</strong></li>
                         <li><i class="fas fa-check"></i> Desconto de 2 meses</li>
                         <li><i class="fas fa-check"></i> Suporte Prioritário</li>
+                        <li><i class="fas fa-check"></i> Limite de 10 Usos/Dia por Funcionalidade</li>
                     </ul>
                     <button class="btn btn-primary btn-full" onclick="window.location.href='contratacao.html?plano=anual'">Assinar Anual</button>
                 </div>
