--- a/termos.html
+++ b/termos.html
@@ -43,6 +43,8 @@
                     <li><strong>Pagamento:</strong> Os pagamentos são processados através de um gateway de pagamento seguro. Ao fornecer suas informações de pagamento, você autoriza o débito recorrente do valor do plano escolhido.</li>
                     <li><strong>Cancelamento:</strong> Você pode cancelar sua assinatura a qualquer momento através do seu painel de perfil. Após o cancelamento, você continuará com acesso às funcionalidades premium até o final do período já pago. Não oferecemos reembolsos por períodos parciais.</li>
                 </ul>
+                <h3>4.1 Limites de Uso</h3>
+                <p>Para garantir a disponibilidade e a qualidade do serviço para todos os usuários, bem como para controlar os custos operacionais das APIs de inteligência artificial, cada plano de assinatura está sujeito a um limite de uso diário para as funcionalidades de geração de conteúdo (cronogramas, exercícios, discursivas e dicas). Os limites específicos de cada plano estão descritos em nossa página de Planos. O uso é resetado diariamente. A IAprovas reserva-se o direito de ajustar esses limites no futuro, mediante notificação prévia aos usuários.</p>
 
                 <h2>5. Propriedade Intelectual</h2>
                 <p>Todo o conteúdo presente na plataforma, incluindo o design, textos, gráficos, logos e o software subjacente, é propriedade da IAprovas e protegido por leis de direitos autorais. O conteúdo gerado pela IA para seu uso pessoal (planos, exercícios, correções) é licenciado a você para fins exclusivamente de estudo pessoal e não comercial.</p>
