feat: Implementa envio de e-mails transacionais

--- a/contratacao.html
+++ b/contratacao.html
@@ -13,7 +13,9 @@
         <header class="dashboard-header">
             <div class="header-content">
                 <div class="header-left">
-                    <div class="logo"><i class="fas fa-book-open"></i><span>IAprovas</span></div>
+                    <a href="index.html" class="logo-link">
+                        <div class="logo"><i class="fas fa-book-open"></i><span>IAprovas</span></div>
+                    </a>
                 </div>
                 <div class="header-right">
                     <a href="index.html#planos" class="btn btn-ghost">← Voltar aos Planos</a>
