--- a/login.html
+++ b/login.html
@@ -12,7 +12,12 @@
         <div class="login-container">
             <div class="login-card">
                 <div class="login-header">
-                    <div class="logo"><i class="fas fa-book-open"></i><span>IAprovas</span></div>
+                    <a href="index.html" class="logo-link">
+                        <div class="logo">
+                            <i class="fas fa-book-open"></i>
+                            <span>IAprovas</span>
+                        </div>
+                    </a>
                     <h1>Entrar no IAprovas</h1>
                     <p>Faça login para acessar sua conta</p>
                 </div>
