--- a/cadastro.html
+++ b/cadastro.html
@@ -12,7 +12,12 @@
         <div class="cadastro-container">
             <div class="cadastro-card">
                 <div class="cadastro-header">
-                    <div class="logo"><i class="fas fa-book-open"></i><span>IAprovas</span></div>
+                    <a href="index.html" class="logo-link">
+                        <div class="logo">
+                            <i class="fas fa-book-open"></i>
+                            <span>IAprovas</span>
+                        </div>
+                    </a>
                     <h1>Criar Conta</h1>
                     <p>Cadastre-se para começar seus estudos</p>
                 </div>
