--- a/cancelado.html
+++ b/cancelado.html
@@ -12,7 +12,9 @@
         <header class="dashboard-header">
             <div class="header-content">
                 <div class="header-left">
-                    <div class="logo"><i class="fas fa-book-open"></i><span>IAprovas</span></div>
+                    <a href="index.html" class="logo-link">
+                        <div class="logo"><i class="fas fa-book-open"></i><span>IAprovas</span></div>
+                    </a>
                 </div>
             </div>
         </header>
