--- a/dicas-estrategicas.html
+++ b/dicas-estrategicas.html
@@ -13,7 +13,9 @@
             <div class="header-content">
                 <div class="header-left">
                     <button id="sidebarToggle" class="sidebar-toggle"><i class="fas fa-bars"></i></button>
-                    <div class="logo"><i class="fas fa-book-open"></i><span>IAprovas</span></div>
+                    <a href="index.html" class="logo-link">
+                        <div class="logo"><i class="fas fa-book-open"></i><span>IAprovas</span></div>
+                    </a>
                 </div>
                 </div>
         </header>
