--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <body>
     <header class="header"> <div class="container">
             <div class="nav-wrapper">
-                <div class="logo">
-                    <i class="fas fa-book-open"></i>
-                    <span>IAprovas</span>
-                </div>
+                <a href="index.html" class="logo-link">
+                    <div class="logo">
+                        <i class="fas fa-book-open"></i>
+                        <span>IAprovas</span>
+                    </div>
+                </a>
                 <nav class="nav-desktop">
                     <a href="#funcionalidades">Funcionalidades</a>
                     <a href="#planos">Planos</a>
