feat: implmenta login com conta google e altera quantidade de gerações por plano

--- a/login.html
+++ b/login.html
@@ -31,6 +31,11 @@
                         <input type="password" id="login-senha" placeholder="••••••••" required>
                     </div>
                     <button type="submit" id="btn-login" class="btn btn-primary btn-full">Entrar</button>
+                    <div style="text-align: center; margin: 20px 0; color: #6b7280;">OU</div>
+                    <button type="button" id="btn-google-login" class="btn btn-full" style="background: white; color: #374151; border: 1px solid #d1d5db; margin-bottom: 20px;">
+                        <img src="https://www.google.com/favicon.ico" alt="Google logo" style="width: 16px; height: 16px;">
+                        Entrar com o Google
+                    </button>
                 </form>
                 <div id="error-message" style="color: red; text-align: center; margin-top: 10px; display: none;"></div>
                 <div class="login-footer">
