--- a/cadastro.html
+++ b/cadastro.html
@@ -46,6 +46,11 @@
                     </div>
                     <div id="error-message-cadastro" style="color: red; text-align: center; margin-bottom: 15px; display: none;"></div>
                     <button type="submit" class="btn btn-primary btn-full">Criar Conta</button>
+                    <div style="text-align: center; margin: 20px 0; color: #6b7280;">OU</div>
+                    <button type="button" id="btn-google-login" class="btn btn-full" style="background: white; color: #374151; border: 1px solid #d1d5db;">
+                        <img src="https://www.google.com/favicon.ico" alt="Google logo" style="width: 16px; height: 16px;">
+                        Cadastrar-se com o Google
+                    </button>
                 </form>
                 <div class="cadastro-footer">
                     <p>Já tem uma conta? <a href="login.html">Faça login aqui</a></p> 
