--- a/privacidade.html
+++ b/privacidade.html
@@ -34,7 +34,14 @@
                     <li><strong>Dados de Perfil (Opcionais):</strong> Você pode optar por nos fornecer informações adicionais em seu perfil, como telefone e endereço, para uma experiência mais completa.</li>
                     <li><strong>Dados de Estudo e Desempenho:</strong> Coletamos as informações que você insere para gerar seus planos de estudo, os exercícios que realiza, suas respostas, as redações que submete para correção e seu desempenho geral. Estes dados são essenciais para o funcionamento das nossas ferramentas de IA.</li>
                     <li><strong>Dados de Pagamento:</strong> Ao assinar um plano, você será redirecionado para nosso parceiro de pagamentos (gateway). <strong>A IAprovas não coleta nem armazena os dados do seu cartão de crédito.</strong> Apenas recebemos a confirmação de que o pagamento foi efetuado.</li>
-                    <li><strong>Dados de Navegação (Cookies):</strong> Utilizamos cookies essenciais para o funcionamento do site, como manter sua sessão de login ativa.</li>
+                    <li>
+                        <strong>Dados de Navegação (Cookies):</strong> Usamos cookies para melhorar e personalizar sua experiência em nossa plataforma. Cookies são pequenos arquivos de dados armazenados no seu navegador. Utilizamos as seguintes categorias:
+                        <ul>
+                            <li style="margin-top:10px;"><strong>Cookies Essenciais:</strong> Estes são necessários para o funcionamento básico do site, como manter sua sessão de login ativa (gerenciado pelo Firebase Authentication) e garantir a segurança. Sem eles, a plataforma não funciona corretamente.</li>
+                            <li><strong>Cookies de Preferência:</strong> Usamos estes cookies para lembrar de escolhas que você faz, como a sua aceitação desta política de cookies. Isso evita que você veja este aviso repetidamente.</li>
+                        </ul>
+                        <p>Ao clicar em "Aceitar" no nosso banner de cookies, você concorda com o uso de cookies conforme descrito. Você pode gerenciar ou excluir cookies através das configurações do seu navegador a qualquer momento.</p>
+                    </li>
                 </ul>
 
                 <h2>2. Como usamos seus dados?</h2>
