feat: implementar verificação de e-mail completa
- Adiciona página de verificação de e-mail (verificar-email.html)
- Implementa JavaScript para gerenciar verificação (verificacao-email.js)
- Modifica auth.js para enviar e-mail de verificação automaticamente
- Adiciona estilos CSS para página de verificação
- Implementa reenvio de e-mail e verificação de status
- Adiciona mensagem de sucesso na página de login
- Configura URLs dinâmicas para funcionar em produção e desenvolvimento
- E-mail de boas-vindas enviado apenas após primeira verificação

--- a/login.html
+++ b/login.html
@@ -38,6 +38,7 @@
                     </button>
                 </form>
                 <div id="error-message" style="color: red; text-align: center; margin-top: 10px; display: none;"></div>
+                <div id="success-message" style="color: green; text-align: center; margin-top: 10px; display: none; background: #dcfce7; padding: 12px; border-radius: 8px; border: 1px solid #bbf7d0;"></div>
                 <div class="login-footer">
                     <p>Não tem uma conta? <a href="cadastro.html">Cadastre-se aqui</a></p>
                     <p><a href="#">Esqueci minha senha</a></p> 
