--- a/sucesso.html
+++ b/sucesso.html
@@ -6,6 +6,14 @@
     <title>Assinatura Confirmada - IAprovas</title>
     <link rel="stylesheet" href="dashboard-lovable.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FCHSYJJ7FB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-FCHSYJJ7FB');
+    </script>
 </head>
 <body>
     <div class="dashboard-layout">
