Corrige falha de funcionamento dos botoes de geracao de conteudo em todas as secoes

--- a/exercicios.html
+++ b/exercicios.html
@@ -107,7 +107,7 @@
 
     <script type="module" src="main-app.js"></script>
     <script type="module" src="api.js"></script>
-    <script type="module" src="processing-ui.js"></script>
+    <script src="processing-ui.js"></script>
     <script type="module" src="exercicios-page.js"></script>
 </body>
 </html>
