--- a/cronograma.html
+++ b/cronograma.html
@@ -111,7 +111,10 @@
             </div>
         </main>
     </div>
-    <script type="module" src="main-app.js"></script><script type="module" src="api.js"></script>    <script type="module" src="processing-ui.js"></script>
+    <script type="module" src="main-app.js"></script>
+    <script type="module" src="api.js"></script>
+    <script src="processing-ui.js"></script>
+    <script src="debug-processing.js"></script>
     <script type="module" src="cronograma-page.js"></script>
 </body>
 </html>
