--- a/discursivas.html
+++ b/discursivas.html
@@ -107,7 +107,7 @@
     </div>
     <script type="module" src="main-app.js"></script>
     <script type="module" src="api.js"></script>
-    <script type="module" src="processing-ui.js"></script>
+    <script src="processing-ui.js"></script>
     <script type="module" src="discursivas-page.js"></script>
 </body>
 </html>
