Finaliza implementação da funcionalidade de flashcards

--- a/exercicios.html
+++ b/exercicios.html
@@ -36,6 +36,7 @@
                     <a id="nav-exercicios" href="exercicios.html" class="nav-item active"><i class="fas fa-book-open"></i><span>Exercícios</span></a>
                     <a id="nav-discursivas" href="discursivas.html" class="nav-item"><i class="fas fa-file-signature"></i><span>Questões Discursivas</span></a>
                     <a id="nav-dicas" href="dicas-estrategicas.html" class="nav-item"><i class="fas fa-bullseye"></i><span>Dicas Estratégicas</span></a>
+                    <a id="nav-flashcards" href="flashcards.html" class="nav-item"><i class="fas fa-clone"></i><span>Flashcards</span></a>
                     <a id="nav-estudo" href="material-de-estudo.html" class="nav-item"><i class="fas fa-book-reader"></i><span>Material de Estudo</span></a>
                 </nav>
         
