--- a/index.html
+++ b/index.html
@@ -111,6 +111,19 @@
                             </div>
                         </div>
 
+                        <!-- Slide 3.5: Flashcards -->
+                        <div class="carousel-slide">
+                            <div class="slide-content">
+                                <div class="slide-image">
+                                    <img src="outros_documentos/Imagens/Flashcards.png" alt="Flashcards Inteligentes">
+                                </div>
+                                <div class="slide-text">
+                                    <h3>Flashcards Inteligentes</h3>
+                                    <p>Revise rapidamente com algoritmos de repetição espaçada. Gere cartões por IA ou crie os seus.</p>
+                                </div>
+                            </div>
+                        </div>
+
                         <!-- Slide 4: Discursivas -->
                         <div class="carousel-slide">
                             <div class="slide-content">
@@ -164,6 +177,7 @@
                         <span class="dot" data-slide="3"></span>
                         <span class="dot" data-slide="4"></span>
                         <span class="dot" data-slide="5"></span>
+                        <span class="dot" data-slide="6"></span>
                     </div>
                     <button class="carousel-btn next" id="nextBtn">
                         <i class="fas fa-chevron-right"></i>
@@ -185,6 +199,7 @@
                         <li><i class="fas fa-check"></i> Exercícios Inteligentes</li>
                         <li><i class="fas fa-check"></i> Correção de Discursivas</li>
                         <li><i class="fas fa-check"></i> Dicas Estratégicas</li>
+                        <li><i class="fas fa-check"></i> Flashcards Inteligentes</li>
                         <li><i class="fas fa-check"></i> Limite de 5 Usos por Funcionalidade</li>
                     </ul>
                     <button class="btn btn-outline btn-full" onclick="window.location.href='cadastro.html'">Começar Teste Gratuito</button>
@@ -197,6 +212,7 @@
                         <li><i class="fas fa-check"></i> Dicas Estratégicas</li>
                         <li><i class="fas fa-check"></i> Acesso ao Guia em PDF</li>
                         <li><i class="fas fa-check"></i> Acesso a Vídeo Aulas</li>
+                        <li><i class="fas fa-check"></i> Flashcards Inteligentes</li>
                         <li><i class="fas fa-check"></i> Limite de 10 Usos/Dia por Funcionalidade</li>
                     </ul>
                     <button class="btn btn-primary btn-full" onclick="window.location.href='contratacao.html?plano=basico'">Assinar Básico</button>
@@ -208,6 +224,7 @@
                     <ul class="features-list">
                         <li><i class="fas fa-check"></i> <strong>Tudo do Básico</strong></li>
                         <li><i class="fas fa-check"></i> Módulo de Exercícios IA</li>
+                        <li><i class="fas fa-check"></i> Flashcards Inteligentes</li>
                         <li><i class="fas fa-check"></i> Limite de 15 Usos/Dia por Funcionalidade</li>
                     </ul>
                     <button class="btn btn-primary btn-full" onclick="window.location.href='contratacao.html?plano=intermediario'">Assinar Intermediário</button>
@@ -218,6 +235,7 @@
                     <ul class="features-list">
                         <li><i class="fas fa-check"></i> <strong>Tudo do Intermediário</strong></li>
                         <li><i class="fas fa-check"></i> Correção de Discursivas IA</li>
+                        <li><i class="fas fa-check"></i> Flashcards Inteligentes</li>
                         <li><i class="fas fa-check"></i> Limite de 20 Usos/Dia por Funcionalidade</li>
                     </ul>
                     <button class="btn btn-primary btn-full" onclick="window.location.href='contratacao.html?plano=premium'">Assinar Premium</button>
@@ -229,6 +247,7 @@
                         <li><i class="fas fa-check"></i> <strong>Todas as funcionalidades</strong></li>
                         <li><i class="fas fa-check"></i> Desconto de 2 meses</li>
                         <li><i class="fas fa-check"></i> Suporte Prioritário</li>
+                        <li><i class="fas fa-check"></i> Flashcards Inteligentes</li>
                         <li><i class="fas fa-check"></i> Limite de 20 Usos/Dia por Funcionalidade</li>
                     </ul>
                     <button class="btn btn-primary btn-full" onclick="window.location.href='contratacao.html?plano=anual'">Assinar Anual</button>
