--- a/home.html
+++ b/home.html
@@ -36,6 +36,7 @@
                     <a id="nav-exercicios" href="exercicios.html" class="nav-item"><i class="fas fa-book-open"></i><span>Exercícios</span></a>
                     <a id="nav-discursivas" href="discursivas.html" class="nav-item"><i class="fas fa-file-signature"></i><span>Questões Discursivas</span></a>
                     <a id="nav-dicas" href="dicas-estrategicas.html" class="nav-item"><i class="fas fa-bullseye"></i><span>Dicas Estratégicas</span></a>
+                    <a id="nav-flashcards" href="flashcards.html" class="nav-item"><i class="fas fa-clone"></i><span>Flashcards</span></a>
                     <a id="nav-estudo" href="material-de-estudo.html" class="nav-item"><i class="fas fa-book-reader"></i><span>Material de Estudo</span></a>
                 </nav>
         
@@ -105,6 +106,10 @@
                             </div>
                         </div>
                         <a href="material-de-estudo.html" class="btn btn-primary btn-full">Acessar Material</a>
+                    </div>
+                    <div class="feature-card">
+                        <div class="feature-header"><div class="feature-icon teal"><i class="fas fa-clone"></i></div><div class="feature-info"><h3>Flashcards Inteligentes</h3><p>Reveja conteúdos rapidamente com repetição espaçada.</p></div></div>
+                        <a href="flashcards.html" class="btn btn-primary btn-full">Estudar Flashcards</a>
                     </div>
                 </div>
             </div>
