Melhora secao de flashcards

--- a/flashcards.html
+++ b/flashcards.html
@@ -51,6 +51,7 @@
                 <section class="welcome-section">
                     <h1>Flashcards</h1>
                     <p>Crie decks personalizados e estude com repetição espaçada.</p>
+                    <p class="flashcards-intro" style="margin-bottom:16px;">Flashcards são cartões Pergunta ↔ Resposta. Revele a resposta, classifique de 0 (errei) a 5 (muito fácil) e deixe que nossa IA agende a próxima revisão por você.</p>
                     <div id="usage-counter" class="usage-info-box"></div>
                 </section>
 
