--- a/home.html
+++ b/home.html
@@ -78,6 +78,14 @@
                         <div class="stat-header"><h3 class="stat-title">Textos Corrigidos</h3></div>
                         <div class="stat-content"><span id="stat-redacoes" class="stat-number orange">0</span><span class="stat-subtitle">total</span></div>
                     </div>
+                    <div class="stat-card">
+                        <div class="stat-header"><h3 class="stat-title">Flashcards</h3></div>
+                        <div class="stat-content" style="display:flex;flex-direction:column;align-items:center;gap:4px;">
+                           <span id="stat-flashcards" class="stat-number green">0</span>
+                           <span id="stat-flash-easy" class="stat-number purple">0%</span>
+                        </div>
+                        <div class="stat-subtitle" style="text-align:center;font-size:0.75rem;">total • % fácil</div>
+                    </div>
                 </div>
 
                 <div class="features-grid" style="margin-top: 32px;">
