Corrige comportamento errado na secao de flashcards

--- a/flashcards.html
+++ b/flashcards.html
@@ -62,12 +62,10 @@
                 <div id="container-form-deck" class="feature-card" style="display:none;margin-bottom:24px;"></div>
 
                 <h2>Seus Decks</h2>
-                <div id="flashcard-recente"></div>
+                <div id="flashcard-estudo" style="display:none;margin-bottom:24px;"></div>
                 <div id="historico-decks" class="historico-grid">
                     <p>Carregando seus decks...</p>
                 </div>
-
-                <div id="flashcard-estudo" style="display:none;margin-top:32px;"></div>
             </div>
         </main>
     </div>
