--- a/home.html
+++ b/home.html
@@ -82,6 +82,7 @@
                         <div class="stat-header"><h3 class="stat-title">Flashcards</h3></div>
                         <div class="stat-content" style="display:flex;flex-direction:column;align-items:center;gap:4px;">
                            <span id="stat-flash-easy" class="stat-number purple">0%</span>
+                           <span id="stat-flashcards" style="display:none;"></span>
                            <small id="stat-flash-detail" style="font-size:0.75rem;color:#6b7280;">0/0</small>
                         </div>
                     </div>
