feat: implementação inicial do sistema de acompanhamento de progresso - backend APIs e estrutura frontend

--- a/cronograma.html
+++ b/cronograma.html
@@ -79,6 +79,27 @@
                     </div>
                 </div>
 
+                <!-- Seção de Progresso -->
+                <div id="progresso-container" class="progresso-card" style="display: none; margin-bottom: 24px;">
+                    <div class="progresso-header">
+                        <h3><i class="fas fa-tasks"></i> Acompanhamento de Progresso</h3>
+                        <div class="progresso-stats">
+                            <span class="stat-item">
+                                <i class="fas fa-check-circle"></i>
+                                <span id="progresso-concluidas">0</span> concluídas
+                            </span>
+                            <span class="stat-item">
+                                <i class="fas fa-fire"></i>
+                                <span id="progresso-streak">0</span> dias seguidos
+                            </span>
+                            <span class="stat-item">
+                                <i class="fas fa-percentage"></i>
+                                <span id="progresso-porcentagem">0%</span> completo
+                            </span>
+                        </div>
+                    </div>
+                </div>
+
                 <button id="btn-abrir-form-cronograma" class="btn btn-primary" style="margin-bottom: 24px;">
                     <i class="fas fa-plus"></i> Gerar Novo Cronograma
                 </button>
