--- a/cronograma.html
+++ b/cronograma.html
@@ -102,6 +102,12 @@
                             </span>
                         </div>
                     </div>
+                    <div class="progresso-grafico">
+                        <h4><i class="fas fa-chart-bar"></i> Progresso por Semana</h4>
+                        <div id="grafico-progresso" class="grafico-container">
+                            <!-- Gráfico será inserido dinamicamente -->
+                        </div>
+                    </div>
                 </div>
 
                 <div id="container-form-novo-plano" class="feature-card" style="display: none; margin-bottom: 32px;">
