fix: correções críticas - botão refinar com debug, gráfico com legenda, progresso geral e cálculo correto por semana

--- a/cronograma.html
+++ b/cronograma.html
@@ -104,6 +104,20 @@
                     </div>
                     <div class="progresso-grafico">
                         <h4><i class="fas fa-chart-bar"></i> Progresso por Semana</h4>
+                        <div class="grafico-legenda">
+                            <div class="legenda-item">
+                                <i class="fas fa-circle legenda-concluida"></i>
+                                <span>Concluído</span>
+                            </div>
+                            <div class="legenda-item">
+                                <i class="fas fa-circle legenda-modificada"></i>
+                                <span>Modificado</span>
+                            </div>
+                            <div class="legenda-item">
+                                <i class="fas fa-circle legenda-incompleta"></i>
+                                <span>Incompleto</span>
+                            </div>
+                        </div>
                         <div id="grafico-progresso" class="grafico-container">
                             <!-- Gráfico será inserido dinamicamente -->
                         </div>
