--- a/exercicios.html
+++ b/exercicios.html
@@ -77,7 +77,10 @@
                     <div class="form-grid" style="grid-template-columns: 1fr 1fr 1fr;">
                         <div class="form-field-group">
                             <label for="exercicio-quantidade">Quantidade</label>
-                            <input type="number" id="exercicio-quantidade" min="1" max="10" value="5">
+                            <input type="number" id="exercicio-quantidade" min="1" max="20" value="5">
+                            <small style="color: #6b7280; font-size: 0.875rem; margin-top: 4px; display: block;">
+                                <i class="fas fa-info-circle"></i> Limite de 1 a 20 questões por sessão
+                            </small>
                         </div>
                         <div class="form-field-group">
                             <label for="exercicio-banca">Banca (Opcional)</label>
