feat: melhorar orientações e adicionar status de revisão nos flashcards

--- a/flashcards.html
+++ b/flashcards.html
@@ -51,7 +51,29 @@
                 <section class="welcome-section">
                     <h1>Flashcards</h1>
                     <p>Crie decks personalizados e estude com repetição espaçada.</p>
-                    <p class="flashcards-intro" style="margin-bottom:16px;">Flashcards são cartões Pergunta ↔ Resposta. Revele a resposta, classifique de 0 (errei) a 5 (muito fácil) e deixe que nossa IA agende a próxima revisão por você.</p>
+                    <div class="flashcards-orientacao" style="background: #f8fafc; border: 1px solid #e2e8f0; border-radius: 8px; padding: 16px; margin: 16px 0;">
+                        <h4 style="margin: 0 0 12px 0; color: #1f2937;"><i class="fas fa-lightbulb"></i> Como Funcionam os Flashcards</h4>
+                        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 16px; font-size: 0.9rem; line-height: 1.5;">
+                            <div>
+                                <h5 style="margin: 0 0 8px 0; color: #374151;"><i class="fas fa-play"></i> Processo de Estudo</h5>
+                                <ul style="margin: 0; padding-left: 16px; color: #4b5563;">
+                                    <li>Veja a pergunta no cartão</li>
+                                    <li>Pense na resposta</li>
+                                    <li>Clique em "Mostrar Resposta"</li>
+                                    <li>Avalie sua lembrança (0-5)</li>
+                                </ul>
+                            </div>
+                            <div>
+                                <h5 style="margin: 0 0 8px 0; color: #374151;"><i class="fas fa-calendar-alt"></i> Repetição Espaçada</h5>
+                                <ul style="margin: 0; padding-left: 16px; color: #4b5563;">
+                                    <li>0-1: Revisão em 1 dia</li>
+                                    <li>2-3: Revisão em 3-7 dias</li>
+                                    <li>4-5: Revisão em 14-30 dias</li>
+                                    <li>Quanto melhor, mais espaçado</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
                     <div id="usage-counter" class="usage-info-box"></div>
                 </section>
 
