fix: corrigir bugs e melhorar UX dos flashcards

--- a/flashcards.html
+++ b/flashcards.html
@@ -69,7 +69,7 @@
                                     <li>0-1: Revisão em 1 dia</li>
                                     <li>2-3: Revisão em 3-7 dias</li>
                                     <li>4-5: Revisão em 14-30 dias</li>
-                                    <li>Quanto melhor, mais espaçado</li>
+                                    <li>Quanto mais espaçado, melhor</li>
                                 </ul>
                             </div>
                         </div>
