fix: ajustes finais na página inicial\n\n- Centraliza e destaca o troféu no card do Adriano\n- Remove parágrafo final da seção 'Sobre'\n- Padroniza caminho das imagens para compatibilidade\n- Atualiza versão das imagens para v=3\n- Melhora apresentação visual do card de conquistas

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <div class="carousel-slide">
                             <div class="slide-content">
                                 <div class="slide-image">
-                                    <img src="outros_documentos/Imagens/Cronograma_acompanhamento.png?v=2" alt="Acompanhamento do Plano de Estudos">
+                                    <img src="outros_documentos/Imagens/Cronograma_acompanhamento.png?v=3" alt="Acompanhamento do Plano de Estudos">
                                 </div>
                                 <div class="slide-text">
                                     <h3>Acompanhamento Inteligente</h3>
@@ -126,7 +126,7 @@
                         <div class="carousel-slide">
                             <div class="slide-content">
                                 <div class="slide-image">
-                                    <img src="outros_documentos/Imagens/Flashcards.png?v=2" alt="Flashcards Inteligentes">
+                                    <img src="outros_documentos/Imagens/Flashcards.png?v=3" alt="Flashcards Inteligentes">
                                 </div>
                                 <div class="slide-text">
                                     <h3>Flashcards Inteligentes</h3>
@@ -282,11 +282,11 @@
                     <p>O que fiz foi <strong>automatizar com IA</strong> as estratégias que utilizamos: desde a geração de cronogramas personalizados até o acompanhamento detalhado do progresso, passando pelo acesso a questões comentadas e correção inteligente de provas discursivas.</p>
                     
                 </div>
-                <div class="stats-card">
+                                <div class="stats-card">
                     <h4>Conquistas do Criador</h4>
                     <div class="achievement-highlight">
-                        <div class="achievement-icon">
-                            <i class="fas fa-trophy"></i>
+                        <div class="achievement-icon" style="text-align: center; margin-bottom: 15px;">
+                            <i class="fas fa-trophy" style="font-size: 2.5em; color: #f59e0b;"></i>
                         </div>
                         <div class="achievement-content">
                             <h4>Adriano Torres</h4>
@@ -294,8 +294,6 @@
                         </div>
                     </div>
                 </div>
-                    
-                    <p class="about-cta">Nossa metodologia já transformou diversas vidas. Agora, com a <strong>Inteligência Artificial</strong>, queremos ajudar você a alcançar seus objetivos de forma mais eficiente e personalizada.</p>
                 </div>
             </div>
         </div>
