--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <div class="carousel-slide">
                             <div class="slide-content">
                                 <div class="slide-image">
-                                    <img src="outros_documentos/Imagens/Cronograma_acompanhamento.png?v=3" alt="Acompanhamento do Plano de Estudos">
+                                    <img src="cronograma_acompanhamento.png" alt="Acompanhamento do Plano de Estudos">
                                 </div>
                                 <div class="slide-text">
                                     <h3>Acompanhamento Inteligente</h3>
@@ -126,7 +126,7 @@
                         <div class="carousel-slide">
                             <div class="slide-content">
                                 <div class="slide-image">
-                                    <img src="outros_documentos/Imagens/Flashcards.png?v=3" alt="Flashcards Inteligentes">
+                                    <img src="flashcards.png" alt="Flashcards Inteligentes">
                                 </div>
                                 <div class="slide-text">
                                     <h3>Flashcards Inteligentes</h3>
