fix: corrige nomes das imagens para resolver problemas de carregamento\n\n- Atualiza nome da imagem de cronograma para CronogramaAcompanhamento.png\n- Adiciona parâmetro de versão para Flashcards.png para forçar reload\n- Corrige erro 404 da imagem de acompanhamento do cronograma\n- Resolve problema de cache da imagem dos flashcards

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                         <div class="carousel-slide">
                             <div class="slide-content">
                                 <div class="slide-image">
-                                    <img src="outros_documentos/Imagens/Cronograma_acompanhamento.png" alt="Acompanhamento do Plano de Estudos">
+                                    <img src="outros_documentos/Imagens/CronogramaAcompanhamento.png" alt="Acompanhamento do Plano de Estudos">
                                 </div>
                                 <div class="slide-text">
                                     <h3>Acompanhamento Inteligente</h3>
@@ -126,7 +126,7 @@
                         <div class="carousel-slide">
                             <div class="slide-content">
                                 <div class="slide-image">
-                                    <img src="outros_documentos/Imagens/Flashcards.png" alt="Flashcards Inteligentes">
+                                    <img src="outros_documentos/Imagens/Flashcards.png?v=2024" alt="Flashcards Inteligentes">
                                 </div>
                                 <div class="slide-text">
                                     <h3>Flashcards Inteligentes</h3>
