fix: corrige bugs dos botões de excluir/regenerar e melhora UX
- Corrige erro 'state is not defined' importando state corretamente
- Substitui popup nativo por modal customizado com melhor UX
- Adiciona sistema de confirmação visual com animações
- Implementa modal responsivo com teclas de atalho (ESC)
- Adiciona ícones e cores específicas para cada ação
- Inclui script confirmation-modal.js em todas as páginas
- Melhora feedback visual durante operações
- Corrige referências de currentUser para state.user

Resolve problemas de UX e funcionalidade dos botões de ação

--- a/cronograma.html
+++ b/cronograma.html
@@ -174,5 +174,6 @@
     <script src="processing-ui.js"></script>
     <script src="debug-processing.js"></script>
     <script type="module" src="cronograma-page.js"></script>
+    <script src="confirmation-modal.js"></script>
 </body>
 </html>
