--- a/exercicios.html
+++ b/exercicios.html
@@ -113,5 +113,6 @@
     <script type="module" src="api.js"></script>
     <script src="processing-ui.js"></script>
     <script type="module" src="exercicios-page.js"></script>
+    <script src="confirmation-modal.js"></script>
 </body>
 </html>
