--- a/dicas-estrategicas.html
+++ b/dicas-estrategicas.html
@@ -92,5 +92,6 @@
     <script type="module" src="api.js"></script>
     <script src="processing-ui.js"></script>
     <script type="module" src="dicas-page.js"></script>
+    <script src="confirmation-modal.js"></script>
 </body>
 </html>
