--- a/flashcards.html
+++ b/flashcards.html
@@ -96,5 +96,6 @@
     <script type="module" src="api.js"></script>
     <script src="processing-ui.js"></script>
     <script type="module" src="flashcards-page.js"></script>
+    <script src="confirmation-modal.js"></script>
 </body>
 </html> 
