--- a/faq.html
+++ b/faq.html
@@ -188,7 +188,7 @@
                         <i class="fas fa-chevron-down"></i>
                     </div>
                     <div class="faq-answer">
-                        <p>Você pode entrar em contato através do e-mail <strong>contato@iaprovas.com.br</strong>. Planos Premium e Anual têm suporte prioritário com resposta em até 24h. Para dúvidas urgentes, utilize o chat em tempo real disponível na plataforma.</p>
+                        <p>Você pode entrar em contato através do e-mail <strong>contato@iaprovas.com.br</strong>. Planos Premium e Anual têm suporte prioritário com resposta em até 48h.</p>
                     </div>
                 </div>
 
@@ -210,10 +210,10 @@
                     </div>
                     <h3>Não encontrou sua resposta?</h3>
                     <p>Nossa equipe está pronta para ajudar você</p>
-                    <a href="mailto:contato@iaprovas.com.br" class="btn btn-primary">
+                    <div class="contact-email">
                         <i class="fas fa-envelope"></i>
-                        Enviar Mensagem
-                    </a>
+                        <a href="mailto:contato@iaprovas.com.br" class="email-link">contato@iaprovas.com.br</a>
+                    </div>
                 </div>
             </div>
         </div>
